modificaciones página search results

--- a/search-results.html
+++ b/search-results.html
@@ -30,11 +30,15 @@
   
     <!--título principal-->
     <section>
-        <h1 class="search">Resultados de búsqueda.</h1>
+        <h1 class="result-titulo">Resultados de búsqueda: "Cover Dua Lipa"</h1>
     </section>
+     
+    <h2 class="leyenda">Lo sentimos, no se han encontrado resultados para tu búsqueda.</h2>
+
+    <h2 class="result-subtitulo">Búsquedas relacionadas</h2>
     
-    <!--resultados de búsqueda Dua Lipa-->
-    <h3 class="result1">"Dua Lipa"</h3>
+    <!--resultados de búsqueda relacionadas-->
+    <h3 class="result-relacionados">"Dua Lipa"</h3>
 
     <article class="contenedor_artistas_home">
 
@@ -53,33 +57,27 @@
             <h4 class="result0"> <a class="result2" href="detail-genres.html"> Ver: Género Pop</a></h4>
         </section>
 
-    </article>
-
-    <!--resultados de búsqueda Rock Nacional-->
-    <h3 class="result1">"Rock Nacional"</h3>
-
-    <article class="contenedor_artistas_home">
-
         <section class="artistas_home">
-            <a href="detail-genres.html"> <img src="../proyecto_integrador/img/fondo.generos.rock.nacional.jpg" alt="Rock Nacional"> </a>
-            <h4 class="result0"> <a class="result2" href="detail-genres.html"> Ver: Género Rock Nacional</a></h4>
+            <a href="detail_album.html"> <img src="../proyecto_integrador/img/detalle.genero.dualipa.jpg" alt="Dua Lipa"> </a>
+            <h4 class="result0"> <a class="result2" href="detail_track.html">Escuchar: Levitating</a></h4>
         </section>
 
     </article>
 
-    <!--resultados de búsqueda Hopeless Fountain Kingdom-->
-    <h3 class="result1">"Hopeless Fountain Kingdom"</h3>
+
+    <!--resultados de búsqueda artista recomendado-->
+    <h3 class="result-relacionados">Artista relacionado</h3>
 
     <article class="contenedor_artistas_home">
-
-        <section class="artistas_home">
-            <a href="detail_album.html"> <img src="../proyecto_integrador/img/fondo.generos.pop.jpg" alt="Hopeless Fountain Kingdom"> </a>
-            <h4 class="result0"> <a class="result2" href="detail_album.html">Album: Hopeless Fountain Kingdom</a></h4>
-        </section>
 
         <section class="artistas_home">
             <a href="detail_artist.html"> <img src="../proyecto_integrador/img/detalle.genero.artista.helsey.jpg" width="219px" alt="Halsey"> </a>
             <h4 class="result0"> <a class="result2" href="detail_artist.html">Artista: Halsey</a></h4>
+        </section>
+
+        <section class="artistas_home">
+            <a href="detail_album.html"> <img src="../proyecto_integrador/img/fondo.generos.pop.jpg" alt="Hopeless Fountain Kingdom"> </a>
+            <h4 class="result0"> <a class="result2" href="detail_album.html">Album: Hopeless Fountain Kingdom</a></h4>
         </section>
 
         <section class="artistas_home">
@@ -94,11 +92,6 @@
 
     </article>
 
-    <!--resultados de búsqueda Cover-->
-    <section class="busqueda1">
-        <h3 class="result1">"Cover Dua Lipa"</h3>
-        <h4 class="leyenda">Lo sentimos, no se han encontrado resultados para tu búsqueda.</h4>
-    </section>
 
     <!--go to top-->
     <article class="arriba-conteiner">
