responsive de search results

--- a/search-results.html
+++ b/search-results.html
@@ -42,22 +42,22 @@
 
     <article class="contenedor_artistas_home">
 
-        <section class="artistas_home">
+        <section class="artistas_home result-item">
             <a href="detail_artist.html"> <img src="../proyecto_integrador/img/detalle.genero.artista.dua.jpg" alt="Dua Lipa"> </a>
             <h4 class="result0"> <a class="result2" href="detail_artist.html"> Ver: Dua Lipa</a></h4>
         </section>
 
-        <section class="artistas_home">
+        <section class="artistas_home result-item">
             <a href="detail_album.html"> <img src="../proyecto_integrador/img/detalle.genero.dualipa.jpg" alt="Dua Lipa"> </a>
             <h4 class="result0"> <a class="result2" href="detail_album.html"> Album: Future Nostalgia</a></h4>
         </section>
 
-        <section class="artistas_home">
+        <section class="artistas_home result-item">
             <a href="detail-genres.html"> <img src="../proyecto_integrador/img/fondo.generos.pop.jpg" alt="Pop"> </a>
             <h4 class="result0"> <a class="result2" href="detail-genres.html"> Ver: Género Pop</a></h4>
         </section>
 
-        <section class="artistas_home">
+        <section class="artistas_home result-item">
             <a href="detail_album.html"> <img src="../proyecto_integrador/img/detalle.genero.dualipa.jpg" alt="Dua Lipa"> </a>
             <h4 class="result0"> <a class="result2" href="detail_track.html">Escuchar: Levitating</a></h4>
         </section>
@@ -70,22 +70,22 @@
 
     <article class="contenedor_artistas_home">
 
-        <section class="artistas_home">
+        <section class="artistas_home result-item">
             <a href="detail_artist.html"> <img src="../proyecto_integrador/img/detalle.genero.artista.helsey.jpg" width="219px" alt="Halsey"> </a>
             <h4 class="result0"> <a class="result2" href="detail_artist.html">Artista: Halsey</a></h4>
         </section>
 
-        <section class="artistas_home">
+        <section class="artistas_home result-item">
             <a href="detail_album.html"> <img src="../proyecto_integrador/img/fondo.generos.pop.jpg" alt="Hopeless Fountain Kingdom"> </a>
             <h4 class="result0"> <a class="result2" href="detail_album.html">Album: Hopeless Fountain Kingdom</a></h4>
         </section>
 
-        <section class="artistas_home">
+        <section class="artistas_home result-item">
             <a href="detail_track.html"> <img src="../proyecto_integrador/img/eyesclosedcancion.jpg" width="219px" alt="Eyes Closed"> </a>
             <h4 class="result0"> <a class="result2" href="detail_track.html">Escuchar: Eyes Closed</a></h4>
         </section>
 
-        <section class="artistas_home">
+        <section class="artistas_home result-item">
             <a href="detail-genres.html"> <img src="../proyecto_integrador/img/fondo.generos.pop.jpg" alt="Pop"> </a>
             <h4 class="result0"> <a class="result2" href="detail-genres.html"> Ver: Género Pop</a></h4>
         </section>
