cambios a etiquetas en detail

--- a/detail_artist.html
+++ b/detail_artist.html
@@ -40,7 +40,7 @@
             <img width="400px" class="detalle"  src="../proyecto_integrador/img/halsey.jpg" alt="Halsey">
         </div>
 
-        <div class="contenido">
+        <aside class="contenido">
             <h4 class="she2">Nombre completo: Ashley Nicolette Frangipane, más conocida como Halsey.</h4>
             <h4 class="she2">Top tracks:
                 <ol class="toptracks">
@@ -52,7 +52,7 @@
                 </ol>
             </h4>
             <h4 class="she2"> <a class="halsi" href="http://www.iamhalsey.com/">Ver más</a></h4>
-        </div>
+        </aside>
 
     </section>
 
