--- a/detail_artist.html
+++ b/detail_artist.html
@@ -75,5 +75,8 @@
         <p>Contacto:  <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">   Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a></p>
     </footer>
     
+    <!--Link a JS-->
+    <script src=""></script>
+    
 </body>
 </html>
