TODOS buscador avanzado

--- a/detail_artist.html
+++ b/detail_artist.html
@@ -42,7 +42,7 @@
 
         <aside class="contenido">
             <h4 class="she2">Nombre completo: Ashley Nicolette Frangipane, más conocida como Halsey.</h4>
-            <h4 class="she2">Top tracks:
+            <h4 class="she2">Top albumes:
                 <ol class="toptracks">
                     <li class="top"><i class="far fa-play-circle"></i><a class="hal" href="detail_track.html"> Eyes Closed</a></li>
                     <li class="top"><i class="far fa-play-circle"></i> <a class="hal" href="detail_track.html"> Without Me</a></li>
