--- a/search-results.html
+++ b/search-results.html
@@ -27,6 +27,10 @@
         </ul>
 
     </header>
+
+    <section class="gif">
+        <img src="./img/giphy.gif" alt="">
+    </section>
   
     <!--título principal-->
     <section>
