uni a playlist.js con track

--- a/detail_track.html
+++ b/detail_track.html
@@ -45,7 +45,7 @@
             <h4 class="halsey">Album: <a class="hal" href="detail_album.html">Hopeless Fountain Kingdom (2017)</a></h4>
             <h4 class="halsey"><a class="hal" href="https://www.youtube.com/watch?v=9LhN6E01Mkc"> <i class="far fa-play-circle"></i> Escuchar "Eyes Closed"</a></h4>
             <h4 class="halsey"> <i class="fab fa-youtube"></i> <a class="hal" href="https://youtu.be/9LhN6E01Mkc">Video de Youtube</a></h4>
-            <h4 class="halsey"><i class="far fa-heart"></i><a class="hal" href="playlist.html"> Agregar a mi playlist</a></h4>
+            <h4 class="agregarafavortios"><i class="far fa-heart"></i><a class="hal" href="playlist.html"> Agregar a favoritos</a></h4>
             <h4 class="halsey"> <a class="si2" href="playlist.html">Ver playlist</a></h4>
         </aside>
 
@@ -59,7 +59,7 @@
     </footer>
 
     <!--Link a JS-->
-    <script src=""></script>
+    <script src="js/playlist.js"></script>
         
 </body>
 </html>
