empece a hacer el js del album, no tengo la API asi que posible correccion

--- a/detail_album.html
+++ b/detail_album.html
@@ -30,35 +30,19 @@
   
     <!--título principal-->
     <section class="album">
-        <h1 class="dom">Hopeless Fountain Kingdom</h1>
+        <h1 class="dom"></h1>
     </section>
 
     <!--información sobre el album-->
     <section class="artist">
 
          <div class="imgartist">
-            <img width="400px"  class="detalle" src="../proyecto_integrador/img/Album.cover.halsey.jpg" alt="Foto del Album">
+            <img width="400px"  class="detalle" src="" alt="Foto del Album">
         </div>
 
         <aside class="info">
-            <h4 class="halsey">Artista:<a class="hal" href="detail_artist.html"> Halsey</a></h4>
-            <h4 class="halsey">Género:<a class="hal" href="detail-genres.html"> Pop, R&B, synth-pop, electropop</a></h4>
-            <h4 class="halsey">Fecha de publicación: 2 de junio de 2017 </h4>
             <h4 class="halsey">Lista de canciones:
                 <ol class="lista1">
-                    <li class="top"><a class="hal" href="detail_track.html">The Prologue </a></li>
-                    <li class="top"><a class="hal" href="detail_track.html">100 Letters</a></li>
-                    <li class="top"><a class="hal" href="detail_track.html">Eyes Closed</a></li>
-                    <li class="top"><a class="hal" href="detail_track.html">Alone</a></li>
-                    <li class="top"><a class="hal" href="detail_track.html">Now Or Never</a></li>
-                    <li class="top"><a class="hal" href="detail_track.html">Sorry</a></li>
-                    <li class="top"><a class="hal" href="detail_track.html">Good Mourning</a></li>
-                    <li class="top"><a class="hal" href="detail_track.html">Lie</a></li>
-                    <li class="top"><a class="hal" href="detail_track.html">Walls Could Talk</a></li>
-                    <li class="top"><a class="hal" href="detail_track.html">Bad At Love</a></li>
-                    <li class="top"><a class="hal" href="detail_track.html">Strangers</a></li>
-                    <li class="top"><a class="hal" href="detail_track.html">Devil In Me</a></li>
-                    <li class="top"><a class="hal" href="detail_track.html">Hopeless</a></li>
                 </ol>
             </h4>
         </aside>
@@ -73,7 +57,7 @@
     </footer>
 
     <!--Link a JS-->
-    <script src=""></script>
+    <script src="./js/detalle.album.js"></script>
     
 </body>
 </html>
