avance en js generos y gif loader terminado

--- a/search-results.html
+++ b/search-results.html
@@ -11,6 +11,11 @@
 </head>
 <body>
 
+    <!--gif-->
+        <section class="gif">
+            <img src="./img/giphy.gif" alt="loader">
+        </section>
+
     <!--cabecera-->
     <header>
 
@@ -28,9 +33,7 @@
 
     </header>
 
-    <section class="gif">
-        <img src="./img/giphy.gif" alt="">
-    </section>
+    
   
     <!--título principal-->
     <section>
