--- a/index.html
+++ b/index.html
@@ -51,6 +51,30 @@
             <h1 class="presen">La mejor música en un lugar</h1>
         </section>
 
+        <!--carrousel-->
+        <div id="slideshow-principal"> </div>
+
+        <div id="progress-bar-container">
+            <div id="progress-bar">
+
+            </div>
+
+            <div id="slideshow">
+                <img class="foto" src="" alt="">
+                <img class="foto" id="img2"  src="" alt="">
+            </div>
+
+            <div id="indicadores">
+
+            </div>
+
+        </div>
+
+            </div>
+
+        </div>
+
+
          <!--canciones-->
         <h1 class="title_home">Canciones recomendadas</h1>
 
