detalle artista, hay algunos errores pero mayormente terminado

--- a/detail_artist.html
+++ b/detail_artist.html
@@ -49,9 +49,7 @@
     <!--información sobre el artista-->
     <section class="artist">
 
-        <div class="imgartist">
-            <img width="400px" class="detalle"  src="" alt="Artista">
-        </div>
+        <div class="imgartist"></div>
           
         <aside class="contenido">
             <h4 class="she2">Top álbums:
@@ -62,6 +60,12 @@
         </aside>
 
     </section>
+
+    <h1 class="title_home">Artistas relacionados</h1>
+
+    <section class="contenedor_artistas_home">
+    </section>
+    
 
     <!--pie de página-->
     <footer> 
