--- a/detail_track.html
+++ b/detail_track.html
@@ -58,6 +58,7 @@
         </div>
 
         <aside class="sey">
+            <iframe title="deezer-widget" class="player" src="" width="400" height="150" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
         </aside>
 
     </section>
