cambios chicos al diseño

--- a/detail_artist.html
+++ b/detail_artist.html
@@ -61,7 +61,7 @@
 
     </section>
 
-    <h1 class="title_home">Artistas relacionados</h1>
+    <h1 class="titulo">Artistas relacionados</h1>
 
     <section class="contenedor_artistas_home">
     </section>
