js de album, con errores pero mayormente terminado

--- a/detail_album.html
+++ b/detail_album.html
@@ -46,21 +46,27 @@
   
     <!--título principal-->
     <section class="album">
-        <h1 class="dom"></h1>
+        <h1 class="she"></h1>
     </section>
 
     <!--información sobre el album-->
     <section class="artist">
 
-         <div class="imgartist">
-            <img width="400px"  class="detalle" src="" alt="Foto del Album">
-        </div>
+         <div class="imgartist"></div>
 
         <aside class="info">
-            <h4 class="halsey">Lista de canciones:
+
+            <h4 class="nombre">Artista: </h4>
+
+            <h4 class="genero">Género: </h4>
+
+            <h4 class="fecha">Fecha de publicación: </h4>
+
+            <h4 class="halsey">Tracklist:
                 <ol class="lista1">
                 </ol>
             </h4>
+
         </aside>
 
     </section>
