termine el js de la cancion, hay que revisar los favoritos

--- a/detail_track.html
+++ b/detail_track.html
@@ -47,18 +47,21 @@
 
     <!--título principal-->
     <section class="eyesclosed">
-        <h1 class="song"></h1>
+        <h1 class="she"></h1>
     </section>
     
     <!--información sobre la canción-->
     <section class="track">
 
-        <div class="img">
-            <img width="400px"  class="detalle"   src="" alt="Album Cover">
-        </div>
+        <div class="img"></div>
 
         <aside class="sey">
+            <h4 class="nombre">Artista: </h4>
+            <h4 class="genero">Album: </h4>
+            <h4 class="halsey">Escucha</h4>
             <iframe title="deezer-widget" class="player" src="" width="400" height="150" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
+            <h4 class="hal"> <a class="si2" href="playlist.html"><i class="far fa-heart"></i> Añadir a mí playlist</a></h4>
+            <h4 class="hal"> <a href="playlist.html">Ver mí playlist</a> </h4>
         </aside>
 
     </section>
