index hecha, con errores

--- a/detail_album.html
+++ b/detail_album.html
@@ -71,6 +71,10 @@
 
     </section>
 
+    <h1 class="titulo">Los albums más escuchados de esta semana</h1>
+
+    <section class="contenedor_artistas_home"></section>
+
     <!--pie de página-->
     <footer> 
         <p>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN </p>
