--- a/detail_track.html
+++ b/detail_track.html
@@ -66,6 +66,10 @@
 
     </section>
 
+    <h1 class="titulo">Las canciones más escuchadas de esta semana</h1>
+
+    <section class="contenedor_artistas_home"></section>
+
     <!--pie de página-->
     <footer> 
         <p>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN </p>
