cambios en playlist

--- a/playlist.html
+++ b/playlist.html
@@ -149,6 +149,6 @@
     </footer>
     
     <!--Link a JS-->
-    <script src=""></script>
+    <script src="js/playlist.js"></script>
 </body>
 </html>
