cambie el nombre en los archivos js para que no genere un error y modifiqué los links de sus respectivas páginas de detalle

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -71,7 +71,7 @@
     </footer>
 
     <!--Link a JS-->
-    <script src="./js/detalle.genres.js"></script>
+    <script src="./js/detalle_genres.js"></script>
    
 </body>
 </html>
