--- a/detail_album.html
+++ b/detail_album.html
@@ -83,7 +83,7 @@
     </footer>
 
     <!--Link a JS-->
-    <script src="./js/detalle.album.js"></script>
+    <script src="./js/detalle_album.js"></script>
     
 </body>
 </html>
