--- a/detail_artist.html
+++ b/detail_artist.html
@@ -75,7 +75,7 @@
     </footer>
     
     <!--Link a JS-->
-    <script src="./js/detalle.artista.js"></script>
+    <script src="./js/detalle_artista.js"></script>
     
 </body>
 </html>
