--- a/detail_track.html
+++ b/detail_track.html
@@ -78,7 +78,7 @@
     </footer>
 
     <!--Link a JS-->
-    <script src="js/detalle.track.js"></script>
+    <script src="js/detalle_track.js"></script>
         
 </body>
 </html>
