--- a/search-results.html
+++ b/search-results.html
@@ -56,14 +56,8 @@
         <h1 class="result-titulo"></h1>
     </section>
 
-    <article class="contenedor_artistas_home">
-            
-        
-
-    </article>
-
-
-
+    <!--información-->
+    <article class="contenedor_artistas_home"></article>
 
     <!--go to top-->
     <article class="arriba-conteiner">
