cambios en header y search results. Faltran filtros

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="alerta"></p>
 
                 <div class="filtros">
-                    <input type="radio" id="todos" name="busqueda" value="Todos">
+                    <input type="radio" id="todos" name="busqueda" value="Todos" checked>
                     <label for="Todos">Todos</label>
                     <input type="radio" id="artista" name="busqueda" value="Artista">
                     <label for="Artista">Artistas</label>
