TODOS, modificaciones a search. Falta leyenda y radio

--- a/search-results.html
+++ b/search-results.html
@@ -34,8 +34,6 @@
                 <label for="Cancion">Canciones</label>
                 <input type="radio" id="album" name="busqueda" value="Album">
                 <label for="Album">Álbumes</label>
-                <input type="radio" id="genero" name="busqueda" value="Género">
-                <label for="Generos">Géneros</label>
             </div>
             
         </form>
@@ -48,13 +46,14 @@
         </ul>
 
     </header>
-
-    
   
     <!--título principal-->
     <section>
         <h1 class="result-titulo"></h1>
     </section>
+
+    <!--leyenda-->
+    <h2 class="leyenda">Lo sentimos, no se han encontrado resultados para tu búsqueda.</h2>
 
     <!--información-->
     <article class="contenedor_artistas_home"></article>
