playlist flex terminado

--- a/playlist.html
+++ b/playlist.html
@@ -42,9 +42,11 @@
 
     </header>
 
-    <section class="music-container">
+    <h1 class="titulo-playlist">Mi Playlist</h1>
 
-       <h1 class="titulo-playlist">Mi Playlist</h1>
+    <section class="track_home_conteiner">
+
+       
     
     </section>
 
